--- a/page01.html
+++ b/page01.html
@@ -113,12 +113,12 @@ Al hacer clic en enlaces o proporcionar información en los sitios web falsos, l
         </div>
 
     </div>
-    <!--Carrusel -->
-    <div class="container-fluid mt-5">
-        <div class="row justify-content-center">
+    <!--Acordeon -->
+    <div class="container-fluid my-5">
+        <div class="row justify-content-center ">
             <h3 class="mt-3 text-center">Casos Famosos</h3>
             <div class="col-6 text-center">
-            <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion accordion-flush overflow-auto p-5" id="accordionFlushExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
