--- a/page2.html
+++ b/page2.html
@@ -37,12 +37,110 @@
 
     <div class="container-fluid my-3">
         <div class="row">
-            <p>Buenas practicas</p>
+            <div class="row justify-content-center ">
+            <h3 class="mt-3 text-center">Consejos</h3>
+            <div class="col-6 text-center">
+            <div class="accordion accordion-flush overflow-auto p-5" id="accordionFlushExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            1. Estar informado
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Es importante estar siempre actualizado con noticias, tendencias y ataques presentados a nivel global. Esto le brindará al equipo de trabajo de su organización, una mejor base de conocimiento para mantener la seguridad cibernética de la empresa.
+
+Estar informado sobre las nuevas amenazas cibernéticas, le permitirá tanto prevenir ataques, como ejecutar procesos de recuperación de ataques, si se llegase a presentar alguno.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            2. Optimización de contraseñas
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Si en la organización existen personas que manipulan diferentes contraseñas para accesos a la infraestructura tecnológica CORE, es recomendable contar con un repositorio seguro en donde se puedan custodiar. Además, estas son algunas buenas prácticas para mantener sus contraseñas seguras:
+
+Creación de contraseñas complejas, no utilice información personal; incluya al menos 10 caracteres, números, caracteres especiales, letras mayúsculas y minúsculas.
+Utilice la autenticación multifactor como la huella, OTP, notificaciones push, pin de seguridad, reconocimiento facial, correos electrónicos o dispositivos móviles.
+Evite compartir contraseñas en sitios en línea, es importante mantenerlas siempre en privado.
+Evite usar la misma contraseña para diferentes plataformas digitales.Cambie las contraseñas con frecuencia (una buena práctica de seguridad oscila entre 60 a 90 días)</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                            3. Uso adecuado del correo electrónico
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Informe al área encargada de tecnología, sobre mensajes sospechosos.
+
+No descargue ni abra archivos adjuntos o enlaces de remitentes desconocidos.
+
+Utilice un administrador de contraseñas que le permita crear contraseñas seguras automáticamente.
+
+Aprenda a reconocer los correos electrónicos de suplantación de identidad, validando siempre la dirección de correo y los detalles de escritura del remitente.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                            4. Antivirus y Firewalls
+                        </button>
+                    </h2>
+                    <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Utilice y mantenga actualizado un antivirus en su estación de trabajo y equipos de la organización. Los firewalls son útiles para poder filtrar los puertos de red que no utiliza, evitando cualquier fuga o tráfico no deseado ni requerido.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                            5. Respaldo de datos
+                        </button>
+                    </h2>
+                    <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Es importante que las organizaciones cuenten con un respaldo seguro de los datos que maneja diariamente en un disco físico como en un servicio de nube. Esto será invaluable ante un ataque cibernético como el Ransomware, ya que la información afectada puede ser recuperada rápidamente.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+                            6. Cultura y políticas de ciberseguridad en la organización 
+                        </button>
+                    </h2>
+                    <div id="flush-collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Es esencial asignar un equipo interno de trabajo para desarrollar estrategias y esquemas de seguridad cibernética que garanticen la protección de los documentos manejados en la organización. Además, es fundamental implementar una cultura de ciberseguridad que motive a integrar las buenas prácticas de ciberseguridad en toda empresa.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
+                            7. Cifrar dispositivos
+                        </button>
+                    </h2>
+                    <div id="flush-collapseSeven" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Actualmente con el trabajo remoto, el perímetro de la red se ha movido a los dispositivos móviles y laptops en nuestros hogares. Por eso, es importante que el equipo de trabajo aprenda a cifrar los dispositivos informáticos que usan para la gestión laboral, teniendo en cuenta la exposición a agentes no corporativos en la que se encuentran.</div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
 
         </div>
     </div>
-    <div class="container-fluid my-3">
+    <div class="container-fluid my-5">
         <div class="row justify-content-center">
+            <h4 class="text-center">Formulario de contacto</h4>
             <div class="col-6 ">
             <form id="contactForm">
              <div class="mb-3">
@@ -62,10 +160,10 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid my-3">
+    <div class="container-fluid my-3 ">
         <div class="row justify-content-center">
             <!-- Botón para abrir modal -->
-            <div class="col-6 mt-4">
+            <div class="col-6 my-4 p-5 text-center">
                 <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#quizModal">
                     ¡Haz tu test de seguridad!
                 </button>
