--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" target="_self" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page01.html" target="_blank">Amenazas comunes</a>
+                        <a class="nav-link" href="page01.html" target="_self">Amenazas comunes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page2.html" target="_blank">Consejos de seguridad</a>
+                        <a class="nav-link" href="page2.html" target="_self">Consejos de seguridad</a>
                     </li>
                 </ul>
             </div>
@@ -37,15 +37,16 @@
     </nav>
 <!--1era seccion-->
     <div class="container-fluid">
-        <div class="row text-center mt-5">
+        <div class="row text-center mt-5 justify-content-center" >
             <h1>Ciberseguridad</h1>
+            <img src="images/ciberseguridad.jpg" alt="portada" id="portada">
             <h2 class="my-3">Que es la ciberseguridad?</h2>
             <div>
                 <button type="button" class="btn btn-success" id="miBoton">Saber más...</button>
             </div>
                  
         </div>
-        <div class="row">
+        <div class="row p-5 mb-5">
         <div id="miContenido" class="oculto">
             <p class="p-5 mb-2 bg-success-subtle text-success-emphasis">La ciberseguridad es el conjunto de prácticas, tecnologías y procesos diseñados para proteger los sistemas informáticos, redes, dispositivos y datos contra ataques cibernéticos. Su objetivo principal es garantizar la confidencialidad, integridad y disponibilidad de la información digital. 
 En otras palabras, la ciberseguridad se encarga de proteger la información y los sistemas contra accesos no autorizados, modificaciones, destrucciones o interrupciones, ya sean intencionales o accidentales. Esto incluye desde la protección de contraseñas y datos personales hasta la seguridad de redes empresariales y sistemas críticos. </p>
