--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <title>Document</title>
+    <title>Ciberseguridad 2</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-success-subtle text-success-emphasis" id="navbar">
