--- a/page01.html
+++ b/page01.html
@@ -24,10 +24,10 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page01.html" target="_blank">Amenazas comunes</a>
+                        <a class="nav-link" href="page01.html" target="_self">Amenazas comunes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page2.html" target="_blank">Consejos de seguridad</a>
+                        <a class="nav-link" href="page2.html" target="_self">Consejos de seguridad</a>
                     </li>
                 </ul>
             </div>
